pet-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
spec:
  selector:
    app: tomcat
    type: LoadBalancer
    type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
