pet-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat
  app: petclinic-app
spec:
  rules:
  - http:
      paths:
      - path: /petclinic
        backend:
          serviceName: tomcat
          servicePort: 8080
